# kellerkompanie-sync-rust

./: README.md
kellerkompanie-sync/: .gitignore  Cargo.toml
kellerkompanie-sync/src/: hashing.rs  main.rs  settings.rs  web_api.rs
