[package]
name = "kellerkompanie-sync"
version = "0.1.0"
authors = ["Schwaggot <tom.ryan@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.1"
ring = "0.17.0-alpha.1"
data-encoding = "2.2.0"
pbr = "1.0.2"
glob = "0.3.0"